manifests/philosopher.yaml
apiVersion: v1
kind: Service
metadata:
  name: philosopher
spec:
  selector:
    app: philosopher
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: philosopher
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: philosopher.yoik.software
    http:
      paths:
      - path: /
        backend:
          serviceName: philosopher
          servicePort: 8000
  tls:
  - hosts:
    - philosopher.yoik.software
    secretName: philosopher-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: philosopher
spec:
  selector:
    matchLabels:
      app: philosopher
  template:
    metadata:
      labels:
        app: philosopher
    spec:
      containers:
      - name: philosopher
        image: ghcr.io/yoiksoft/philosopher:v1.0.0-beta.1
        resources:
          requests:
            cpu: 200m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 50Mi
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ghcr
