manifests/philosopher.yml
apiVersion: v1
kind: Service
metadata:
  name: philosopher-${YOIK_RESOURCE_ID}
spec:
  selector:
    app: philosopher-${YOIK_RESOURCE_ID}
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: philosopher-${YOIK_RESOURCE_ID}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: philosopher.yoik.software
    http:
      paths:
      - path: /${YOIK_RESOURCE_ID}(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: philosopher-${YOIK_RESOURCE_ID}
            port:
              number: 8000
  tls:
  - hosts:
    - philosopher.yoik.software
    secretName: philosopher-${YOIK_RESOURCE_ID}-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: philosopher-${YOIK_RESOURCE_ID}
spec:
  selector:
    matchLabels:
      app: philosopher-${YOIK_RESOURCE_ID}
  template:
    metadata:
      labels:
        app: philosopher-${YOIK_RESOURCE_ID}
    spec:
      containers:
      - name: philosopher
        image: ${YOIK_RESOURCE_IMAGE}
        command: ["/bin/sh", "-c"]
        args: ["uvicorn --host 0.0.0.0 --port 8000 --log-level trace --proxy-headers --root-path /${YOIK_RESOURCE_ID} app:app"]
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 100Mi
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ghcr
